<resources>

    <string name="app_name">Falling Words</string>
    <string name="text_home">HOME</string>
    <string name="text_play">PLAY</string>
    <string name="text_instruction">The game will display a word in English, and there will be a falling word from the top of the screen in Spanish. \n\nYour goal is to decide whether the falling word is the correct translation of the given word or not. \n\nIf the falling word translation matches the given word choose <font color='#7CB342'>MATCH</font> otherwise choose <font color='#FA5855'>NO MATCH</font> before the falling word gets to the bottom of the screen. \n\nPoints will be out of a total of 10.</string>
    <string name="text_game">GAME</string>

    <string name="text_match">MATCH</string>
    <string name="text_no_match">NO MATCH</string>
    <string name="text_score">Score:</string>

    <string name="text_final_score">Final Score:</string>
    <string name="text_quit">QUIT</string>
    <string name="text_restart">RESTART</string>
    <string name="text_result">RESULT</string>
</resources>