<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.babbeltest.fallingwords.ui.home.HomeFragment"
        android:label="@string/text_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigate_home_to_game"
            app:destination="@+id/navigation_game"
            />
    </fragment>

    <fragment
        android:id="@+id/navigation_game"
        android:name="com.babbeltest.fallingwords.ui.game.GameFragment"
        android:label="@string/text_game"
        tools:layout="@layout/fragment_game">

        <action
            android:id="@+id/action_navigate_game_to_home"
            app:destination="@id/navigation_home" />

        <action
            android:id="@+id/action_navigate_game_to_result"
            app:destination="@id/navigation_result"/>

    </fragment>

    <fragment
        android:id="@+id/navigation_result"
        android:name="com.babbeltest.fallingwords.ui.results.ResultFragment"
        android:label="@string/text_result"
        tools:layout="@layout/fragment_result">

        <argument
            android:name="gameScore"
            app:argType="integer"
            />

        <argument
            android:name="noResponse"
            app:argType="integer"
            />

        <argument
            android:name="incorrectResponse"
            app:argType="integer"
            />

        <action
            android:id="@+id/action_navigate_game_to_home"
            app:destination="@id/navigation_home"
            />

        <action
            android:id="@+id/action_navigate_result_to_game"
            app:destination="@id/navigation_game"
            />
    </fragment>

</navigation>