<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

        <variable
            name="varViewModel"
            type="com.babbeltest.fallingwords.ui.home.HomeViewModel" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/tv_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="@dimen/line_spacing"
        android:layout_margin="@dimen/margin_medium3"
        android:textColor="@color/color_secondary_variant"
        android:fontFamily="@font/chewey"
        android:textSize="@dimen/textsize_large3"
        android:text="@string/app_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tv_sub_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-black"
        android:textSize="@dimen/textsize_medium1"
        android:text="@string/text_instruction"
        app:layout_constraintTop_toBottomOf="@id/tv_header"
        app:layout_constraintStart_toStartOf="@id/tv_header"
        app:layout_constraintEnd_toEndOf="@id/tv_header"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_start"
        android:layout_width="@dimen/view_size_large3"
        android:layout_height="@dimen/view_size_large3"
        android:text="@string/text_play"
        android:textSize="@dimen/textsize_large2"
        android:backgroundTint="@color/color_primary_variant"
        android:fontFamily="@font/chewey"
        android:onClick="@{() -> varViewModel.onStartClicked()}"
        android:layout_marginTop="@dimen/margin_medium3"
        app:layout_constraintTop_toBottomOf="@id/tv_sub_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Circle"
        style="@style/Widget.Material3.Button.Icon"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>